# analytics-data-platform

./: .adr-dir  .coderabbit.yaml  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  README.md  readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/scripts/: test-ceph-s3-iceberg-upload.py
.github/workflows/: ceph-s3-iceberg-upload.yml  ci-static.yml  docker-superset.yml  elt-common_e2e_tests.yml  elt-common_tests.yml  elt-common_unit_tests.yml  pipelines-common_e2e_tests.yml  pipelines-common_unit_tests.yml  rest-catalog-tests.yml  test-ceph-s3-iceberg-upload.py  warehouses_e2e_tests.yml
docs/: build.sh  requirements.in  requirements.txt
docs-devel/: connecting-to-the-lakehouse.md  contributing.md  elt-pipelines.md  getting-started.md  index.md  mkdocs.yml  readme.md  testing.md
docs-devel/data-architecture/: catalogs.md  index.md
docs-devel/deployment/: certificates.md  index.md  prerequisites.md  troubleshooting.md
docs-devel/images/: .gitignore  analytics-data-platform-arch.drawio
docs-devel/src/: index.md
docs-devel/system-architecture/: index.md
docs-user/: .gitignore  requirements.in  requirements.txt  zensical.toml
docs-user/src/: index.md
docs/src/: index.md
elt-common/: .gitignore  README.md  pyproject.toml  pytest.ini
elt-common/src/elt_common/: catalog.py  cli.py  cli_utils.py  constants.py  extract.py  manifest.py  pipeline.py  pipeline_types.py  runner.py  tester.py  types.py  typing.py
elt-common/src/elt_common/dlt_destinations/: __init__.py
elt-common/src/elt_common/dlt_destinations/pyiceberg/: __init__.py  configuration.py  factory.py  helpers.py  pyiceberg.py  pyiceberg_adapter.py  schema.py  type_mapping.py
elt-common/src/elt_common/dlt_sources/m365/: __init__.py  helpers.py
elt-common/src/elt_common/iceberg/: catalog.py  io.py  partition.py  schema.py  sortorder.py  trino.py  watermark.py  writer.py
elt-common/src/elt_common/iceberg/maintenance/: __init__.py  __main__.py
elt-common/src/elt_common/sources/m365/: __init__.py  client.py  configuration.py  credentials.py  drive.py
elt-common/src/elt_common/sources/sqldatabase/: __init__.py
elt-common/src/elt_common/testing/: __init__.py  catalog.py  dlt.py  fixtures.py  lakekeeper.py  sqlcatalog.py
elt-common/src/pipelines_common/: cli.py  pipeline.py
elt-common/tests/: conftest.py
elt-common/tests/e2e_tests/: conftest.py  test_ingest.py
elt-common/tests/e2e_tests/elt_common/dlt_destinations/pyiceberg/: conftest.py  test_pyiceberg_pipeline.py  utils.py
elt-common/tests/e2e_tests/elt_common/iceberg/: conftest.py  test_maintenance.py
elt-common/tests/e2e_tests/isis-facility_ops/ingest/domain_a/fake_source/: fake_source.py
elt-common/tests/e2e_tests/pipelines/destinations/pyiceberg/: test_pyiceberg_pipeline.py  utils.py
elt-common/tests/unit_tests/: test_catalog.py  test_cli.py  test_extract.py  test_manifest.py  test_pipeline.py  test_runner.py  test_tableproperties.py
elt-common/tests/unit_tests/create_extract_obj_fakes/: custom_config.py  sql_extract.py  three_empty_tables.py
elt-common/tests/unit_tests/create_extract_obj_fakes/errors/: doesnt_implement_method.py  non_class.py  non_sub_class.py
elt-common/tests/unit_tests/dlt_destinations/pyiceberg/: test_configuration.py  test_helpers.py  test_pyiceberg_adapter.py
elt-common/tests/unit_tests/dlt_sources/: conftest.py  graph-responses.json  test_m365.py
elt-common/tests/unit_tests/iceberg/: conftest.py  test_catalog.py  test_io.py  test_partition.py  test_schema.py  test_sortorder.py  test_trino.py  test_watermark.py  test_writer.py
elt-common/tests/unit_tests/iceberg/maintenance/: test_table_maintenance.py
elt-common/tests/unit_tests/runner_extractor_fakes/: all_write_modes.py  replace_multiple_yield.py  watermark_handling.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/dynamic_tables/: dynamic_tables.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/missing_table_from_tables_method/: missing_table_from_tables_method.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/no_extract_cls/: no_extract_cls.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/replace_multiple_yield/: replace_multiple_yield.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/simple/: simple.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/watermark_handling/: watermark_handling.py
elt-common/tests/unit_tests/runner_test_fake_extract_defs/working_impl/: working_impl.py
elt-common/tests/unit_tests/runner_test_fakes/: README.md
elt-common/tests/unit_tests/runner_test_fakes/fake_working_extract/: fake_working_extract.py
elt-common/tests/unit_tests/sources/: test_m365.py  test_sqldatabase.py
elt-pipelines/: README.md  pyproject.toml
elt-pipelines/facility_ops/ingest/accelerator/accelerator_sharepoint/: accelerator_sharepoint.py
elt-pipelines/facility_ops/ingest/accelerator/sharepoint/: sharepoint.py
elt-pipelines/facility_ops/ingest/accelerator/statusdisplay/: statusdisplay.py
elt-pipelines/facility_ops/ingest/estates/electricity_sharepoint/: electricity_sharepoint.py  parsing.py
elt-pipelines/fase/ingest/fase/isisuserdb/: isisuserdb.py
elt-pipelines/fase/ingest/fase/proposal/: proposal.py
elt-pipelines/fase/ingest/fase/utils/: oracle.py  postgres.py
elt-pipelines/pipelines/ingest/accelerator/statusdisplay/: statusdisplay.py
infra/ansible-docker/: .gitignore  ansible-galaxy-requirements.yml  inventory-qa.yml  inventory-sample.yml  local.yml  (+4 more)
pipelines/pipelines-common/: .gitignore  pyproject.toml
pipelines/pipelines-common/src/pipelines_common/: cli.py  pipeline.py
pipelines/pipelines-common/src/pipelines_common/dlt_sources/m365/: __init__.py  helpers.py
pipelines/pipelines-common/tests/unit_tests/dlt_sources/: conftest.py  test_m365.py  test_m365_helpers.py
warehouses/: .gitignore
(+640 files in other folders)
