[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elt-common"
version = "0.1.0"
description = "A set of common utility routines for data pipelines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "dlt[parquet,s3]>=1.24.0,<2",
  "pyarrow==23.0.1",                 # See https://github.com/ISISNeutronMuon/analytics-data-platform/issues/183
  "pyiceberg[pyiceberg-core]>=0.11.1",
  "s3fs<2026.4.0",                   # See https://github.com/ISISNeutronMuon/analytics-data-platform/issues/237
]


[project.optional-dependencies]
iceberg-maintenance = [
  "click>=8.3.2",
  "sqlalchemy>=2.0.49",
  "trino>=0.336.0",
  "pydantic_settings>=2.12.0",
]
m365 = ["authlib>=1.6.10", "httpx>=0.28.1", "tenacity>=9.1.2"]

[project.entry-points.pytest11]
elt_common = "elt_common.testing.fixtures"

[project.scripts]
iceberg-maintenance = "elt_common.iceberg.maintenance:cli"

[dependency-groups]
dev = [
  "minio>=7.2.20",
  "prek>=0.3.9",
  "pydantic-settings>=2.10.1",
  "pytest>=9.0.3",
  "pytest-httpx>=0.36.2",
  "pytest-mock>=3.15.1",
  "requests>=2.33.1",
  "requests-mock>=1.12.1",
  "ruff>=0.15.10",
]


[tool.ruff]
line-length = 100
