[project]
name = "elt-pipelines"
version = "0.1.0"
description = "Pipelines for ingesting data into Iceberg catalogs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elt-common",
]

[tool.uv.sources]
elt-common = { path = "../elt-common", editable = true }

[dependency-groups]
dev = [
    "prek>=0.4.5",
]
