[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelines-common"
version = "0.1.0"
description = "A set of common utility routines for data pipelines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib~=1.6.1",
    "dlt[parquet,s3]~=1.15.0",
    "lock>=2018.3.25.2110",
    "pyiceberg~=0.9.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pydantic-settings~=2.10.1",
    "pytest~=8.3.5",
    "pytest-httpx~=0.35.0",
    "pytest-mock~=3.14.1",
    "requests~=2.32.3",
    "requests-mock~=1.12.1",
    "ruff~=0.11.11",
]

[tool.ruff]
line-length = 100
